<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorNavigation"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:src="@drawable/ic_back"
            android:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/title_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_extra"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="Review"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="10dp"
        >

        <TextView
            android:id="@+id/title_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learning_review"
            android:textStyle="bold"
            android:textSize="21sp"
            >
        </TextView>

        <TextView
            android:id="@+id/review_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learning_review_desc"
            android:layout_below="@+id/title_review"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            >

        </TextView>

    </RelativeLayout>

    <Button
        android:id="@+id/start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_rounded"
        android:layout_margin="8dp"
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>